--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Cat Gif Generator" />
+  <meta property="og:image" content="https://i.ibb.co/BL14p6W/OIG.jpg" />
   <title>Random Cat Gif Generator</title>
 </head>
 
