--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/jpg" href="/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Cat Gif Generator" />
   <meta property="og:image" content="https://i.ibb.co/BL14p6W/OIG.jpg" />
