Updated look and feel

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="Cat Gif Generator" />
+  <meta name="description" content="MeowGen - Where every cat is a masterpiece. Generate beautiful cat images with our AI-powered generator." />
+  <meta property="og:title" content="MeowGen - AI Cat Image Generator" />
+  <meta property="og:description" content="Where every cat is a masterpiece. Generate beautiful cat images with our AI-powered generator." />
   <meta property="og:image" content="https://i.ibb.co/BL14p6W/OIG.jpg" />
-  <title>Random Cat Gif Generator</title>
+  <meta property="og:url" content="https://meowgen.siftion.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <title>MeowGen - AI Cat Image Generator</title>
 </head>
 
 <body>
